[package]
name = "yapp"
version = "0.2.0"
edition = "2021"
description = "Yet Another Password Prompt"
license = "MIT"
authors = ["Piotr Karasinski"]
readme = "README.md"
repository = "https://github.com/caleb9/yapp"
keywords = [
    "password",
    "prompt",
    "terminal",
    "console",
]
rust-version = "1.70.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"

[[example]]
name = "mock_yapp"
path = "examples/mock_yapp.rs"
crate-type = ["staticlib"]
test = true

[dev-dependencies]
mockall = "0.12.*"